--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="static/css/styles3.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                <img src="/static/images/icon 1.png" alt="Logo" width="50" class="me-2">
-                <span class="fw-bold">Smart Healthcare Assistant</span>
+            <a class="navbar-brand" href="/">
+                <img src="/static/images/icon 1.png" alt="Logo" width="50">
+                <span class="fw-bold text-primary">Smart Healthcare Assistant</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/chatbot">Chatbot</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about-us">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/nearby_facilities">Nearby Facilities</a></li>
+                    <li class="nav-item"><a class="nav-link {{ 'active' if request.path == '/' }}" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link {{ 'active' if request.path == '/chatbot' }}" href="/chatbot">Chatbot</a></li>
+                    <li class="nav-item"><a class="nav-link {{ 'active' if request.path == '/about-us' }}" href="/about-us">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link {{ 'active' if request.path == '/nearby_facilities' }}" href="/nearby_facilities">Nearby Facilities</a></li>
                 </ul>
             </div>
         </div>
